--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,307 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
   flex-direction: column;
+  margin: 0;
+}
+
+.head-wrapper {
+  background-color: #d2b713;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
+  height: 100px;
+  padding: 0 20px 0 20px;
+}
+
+#header-logo {
+  display: flex;
+  max-width: 100%;
+  height: 70%;
+}
+
+#menu__toggle {
+  opacity: 0;
+}
+
+.nav-wrapper {
+  display: flex;
+  padding: 0;
+  list-style-type: none;
+}
+
+.menu__item {
+  display: block;
+  padding: 0 10px 0 0;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+a {
+  margin-right: 10px;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  height: 85vh;
+}
+
+.bottom-footer {
+  display: flex;
+  background-color: #82e782;
+  height: 5vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.aside-1, .main-wrapper, .aside-3 {
+  display: flex;
+  align-items: stretch;
+  overflow: auto;
+  flex-direction: row;
+  justify-content: center;
+
+  max-height: calc(100vh - 100px);
+}
+
+.aside-1 {
+  background-color: #c798b9;
+  width: 20vw;
+  padding-top: 10px;
+}
+
+.aside-3 {
+  background-color: #9cb0c7;
+  width: 20vw;
+  padding-top: 10px;
+}
+
+.main-wrapper {
+  display: flex;
+  flex-grow: 4;
+  padding: 0 20px 0 20px;
+  flex-direction: column;
+  align-items: center;
+
+  min-height: 760px;
+}
+
+.footer {
+  height: 50px;
+}
+
+.footer-content {
+  display: flex;
+  align-self: center;
+}
+
+.card-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5px;
+  max-width: 57vw;
+  min-height: 35vh;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10%;
+  border: solid 3px grey;
+
+  width: 17vw;
+  min-width: 158px;
+  height: 27vh;
+  padding: 5px;
+}
+
+#card-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#card-img {
+  border-radius: 50%;
+  border: solid 5px rgba(139, 139, 139, 0.684);
+  width: 50px;
+  max-width: 100%;
+
+  margin-top: 10px;
+}
+
+#card-text {
+  text-align: center;
+  margin-top: 0;
+}
+
+h5 {
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.card-btn {
+  background-color: #675174;
+  border-radius: 30%;
   color: white;
+  margin-bottom: 5px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 968px) {
+  .card-wrapper {
+    max-width: 75vw;
+    min-height: 35vh;
   }
-  to {
-    transform: rotate(360deg);
+
+}
+
+@media (max-width: 860px) {
+  .aside-1 {
+    display: none;
+  }
+
+  .main-wrapper {
+    width: 70vw;
+  }
+
+  .aside-3 {
+    width: 30vw;
+  }
+
+  #header-logo {
+    display: flex;
+    width: 15%;
+    max-width: 100%;
+    height: 50%;
+  }
+
+  p {
+    text-align: center
+  }
+
+  .card {
+    height: 30vh;
+  }
+}
+
+@media (max-width: 800px) {
+  .card-wrapper {
+    width: 67vw;
+    min-height: 35vh;
+  }
+
+  .card {
+    width: 70vw;
+  }
+}
+
+@media (max-width: 500px) {
+  #header-logo {
+    display: flex;
+    width: 30%;
+    max-width: 100%;
+    height: 50%;
+  }
+
+  .main-wrapper {
+    width: 85vw;
+  }
+
+  .menu__btn {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    position: fixed;
+    top: 30px;
+    left: 85vw;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #616161;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+
+  .nav-wrapper {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 100px;
+    right: -100%;
+    width: 100px;
+    height: 100%;
+    margin: 0;
+    padding: 10px 30px;
+    list-style: none;
+    text-align: center;
+    background-color: #ECEFF1;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+  }
+
+  .menu__item {
+    display: block;
+    padding: 12px 4px;
+    color: #333;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  .menu__item:hover {
+    background-color: #CFD8DC;
+  }
+
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+
+  #menu__toggle:checked ~ .nav-wrapper {
+    visibility: visible;
+    right: 0;
+  }
+
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    transition-duration: .25s;
+  }
+  .nav-wrapper {
+    transition-duration: .25s;
+  }
+  .menu__item {
+    transition-duration: .25s;
   }
 }
