--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,14 @@ body {
   height: 70%;
 }
 
-#menu__toggle {
-  opacity: 0;
-}
-
 .nav-wrapper {
   display: flex;
-  padding: 0;
   list-style-type: none;
+  width: 25vw;
+}
+
+a {
+  padding-left: 1.5vw;
 }
 
 .menu__item {
@@ -38,10 +38,6 @@ body {
   font-size: 20px;
   font-weight: 600;
   text-decoration: none;
-}
-
-a {
-  margin-right: 10px;
 }
 
 .content {
@@ -177,7 +173,6 @@ h5 {
 
   #header-logo {
     display: flex;
-    width: 15%;
     max-width: 100%;
     height: 50%;
   }
@@ -197,8 +192,17 @@ h5 {
     min-height: 35vh;
   }
 
+  .nav-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
   .card {
     width: 70vw;
+  }
+
+  a {
+    padding-left: 0.5vw;
   }
 }
 
@@ -212,96 +216,5 @@ h5 {
 
   .main-wrapper {
     width: 85vw;
-  }
-
-  .menu__btn {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    position: fixed;
-    top: 30px;
-    left: 85vw;
-    width: 26px;
-    height: 26px;
-    cursor: pointer;
-    z-index: 1;
-  }
-
-  .menu__btn > span,
-  .menu__btn > span::before,
-  .menu__btn > span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #616161;
-  }
-  .menu__btn > span::before {
-    content: '';
-    top: -8px;
-  }
-  .menu__btn > span::after {
-    content: '';
-    top: 8px;
-  }
-
-  .nav-wrapper {
-    display: block;
-    position: fixed;
-    visibility: hidden;
-    top: 100px;
-    right: -100%;
-    width: 100px;
-    height: 100%;
-    margin: 0;
-    padding: 10px 30px;
-    list-style: none;
-    text-align: center;
-    background-color: #ECEFF1;
-    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-  }
-
-  .menu__item {
-    display: block;
-    padding: 12px 4px;
-    color: #333;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    text-decoration: none;
-  }
-  .menu__item:hover {
-    background-color: #CFD8DC;
-  }
-
-  #menu__toggle:checked ~ .menu__btn > span {
-    transform: rotate(45deg);
-  }
-
-  #menu__toggle:checked ~ .menu__btn > span::before {
-    top: 0;
-    transform: rotate(0);
-  }
-
-  #menu__toggle:checked ~ .menu__btn > span::after {
-    top: 0;
-    transform: rotate(90deg);
-  }
-
-  #menu__toggle:checked ~ .nav-wrapper {
-    visibility: visible;
-    right: 0;
-  }
-
-  .menu__btn > span,
-  .menu__btn > span::before,
-  .menu__btn > span::after {
-    transition-duration: .25s;
-  }
-  .nav-wrapper {
-    transition-duration: .25s;
-  }
-  .menu__item {
-    transition-duration: .25s;
   }
 }
